plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.5'
    id 'io.spring.dependency-management' version '1.1.3'
    id 'application'
}

group = 'rs.luis'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
}

ext {
    set('springShellVersion', "3.1.4")
}

dependencies {
    implementation 'org.springframework.shell:spring-shell-starter'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.shell:spring-shell-dependencies:${springShellVersion}"
    }
}

tasks.register('start', Exec) {
    workingDir './'
    commandLine 'java', '-jar', 'build/libs/respondet-0.0.1-SNAPSHOT.jar', 'resp'
    standardInput System.in
}


tasks.named('test') {
    useJUnitPlatform()
}
